include_directories()


add_executable(13.1 1_函数模板基础.cpp ${dir_src})
add_executable(13.2 2_函数模板案例.cpp ${dir_src})
add_executable(13.3 3_函数模板和普通函数的区别.cpp ${dir_src})
add_executable(13.4 4_模板的局限性.cpp ${dir_src})
add_executable(13.5 5_类模板基础.cpp ${dir_src})
add_executable(13.6 6_类模板中成员函数的创建时机.cpp ${dir_src})
add_executable(13.7 7_类模板对象做函数参数.cpp ${dir_src})
add_executable(13.8 8_类模板的继承.CPP ${dir_src})
add_executable(13.9 9_类模板成员函数类外实现.cpp ${dir_src})
add_executable(13.10 10_类模板与友元.cpp ${dir_src})
add_executable(13.11 11_数组类模板案例.cpp ${dir_src})